Fix flex-wrapping and adjust padding of heading

--- a/style.css
+++ b/style.css
@@ -10,18 +10,13 @@ body {
 .main {
     margin:0;
     padding: 50px;
-
     background-color: #1F2937;
 }
 
 .header {
-    margin-left:5rem;
-    margin-right:5rem;
     display: flex;
     justify-content: center;
-    margin: 0px;
-    margin-top: 3px;
-    padding: 0px;
+    padding: 20px;
     align-items: center;
     justify-content: space-between;
 }
@@ -34,32 +29,36 @@ body {
 
 .heading {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    padding-top: 80px;
+    padding: 20px;
+    flex-wrap: wrap;
 }
 .main-content {
     display: flex;
     flex-direction: column;
-    
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
+    
 }
 
 .main-image {
     display: flex;
-    flex: 1 0 auto;
+    flex: 1 1 auto;
     align-items: center;
-    margin-left: 20px;
     justify-content: center;
+    padding:2%;
+    margin-left:2rem;
     color: white;
     background-color: grey;
-    width: 40rem;
-    height: 15rem;
+    width: 200px;
+    height: 200px;
 }
 
 .button-1{
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 10px 50px 10px 50px;
     border-style: hidden;
     border-radius: 10px;
@@ -72,6 +71,8 @@ body {
 }
 
 
+
+
 h2, ul{
     color: #e5e7eb;
     font-size: 18px;
@@ -81,6 +82,8 @@ h2, ul{
 
 ul {
     display: flex;
+    justify-content: flex-end;
+    flex: 1;
     list-style-type: none;
     margin: 0px;
     padding: 0px;
@@ -98,4 +101,17 @@ h1 {
     font-weight:bolder;
     color: #f9faf8;
     margin: 0;
+}
+
+
+
+
+
+
+.footer{
+    padding: 2%;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    color: white;
 }
